--- a/date/2025-03/page-2.htm
+++ b/date/2025-03/page-2.htm
@@ -115,6 +115,96 @@
             </div>
             <div class="row">
                 <div class="col-md-9 xcblog-blog-list">
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-25">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/news/article-81045.htm" title="你确定你会用Enum枚举了？" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/c8ff7aedac806fecb30cb33ee55b8cc1.webp" alt="你确定你会用Enum枚举了？">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-81045.htm" title="你确定你会用Enum枚举了？" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">你确定你会用Enum枚举了？</h3>
+                            </a>
+                            <p class="about_text">一般在我们开发时如果能使用枚举罗列的，一般都会定义一个枚举类型。将枚举类型作为方法的参数，可以方便的进行调用，给我们带来不少的遍历，当然有时候它还不如直接用一个int类型带来，带来一定灵活性。但只要能</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-25">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-3-25-free-subscribe-node.htm" title="VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/dbb125d5f2056af3c5a995d7c82225ac.webp" alt="VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-3-25-free-subscribe-node.htm" title="VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月25日21.9M/S|免费Clash/Shadowrocket/V2ray/SSR订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了香港、韩国、新加坡、日本、加拿大、欧洲、美国等地区,最高速度可达21.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-24">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/news/article-80315.htm" title="机器学习系列：LightGBM 可视化调参" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/35cd59f6c9e33127c228b8be79274267.webp" alt="机器学习系列：LightGBM 可视化调参">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-80315.htm" title="机器学习系列：LightGBM 可视化调参" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">机器学习系列：LightGBM 可视化调参</h3>
+                            </a>
+                            <p class="about_text">大家好，在100天搞定机器学习|Day63 彻底掌握 LightGBM一文中，我介绍了LightGBM 的模型原理和一个极简实例。最近我发现Huggingface与Streamlit好像更配，所以就开</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-24">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/news/article-80314.htm" title="ruby 版本管理RVM （ruby version manager）" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/6e0666170b743f277ea390817dbb58e7.webp" alt="ruby 版本管理RVM （ruby version manager）">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-80314.htm" title="ruby 版本管理RVM （ruby version manager）" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">ruby 版本管理RVM （ruby version manager）</h3>
+                            </a>
+                            <p class="about_text">macOS. 自带的ruby 版本目录权限比较高， 经常有很多 操作需要权限而不能执行   虽然 macOS 自带了一个 ruby 环境，但是是系统自己使用的，所以权限很小，只有 system。   </p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-24">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/free-nodes/2025-3-24-free-high-speed-nodes.htm" title="VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/35cd59f6c9e33127c228b8be79274267.webp" alt="VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/free-nodes/2025-3-24-free-high-speed-nodes.htm" title="VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月24日18.3M/S|免费V2ray/SSR/Clash/Shadowrocket订阅节点</h3>
+                            </a>
+                            <p class="about_text">这一次的节点更新覆盖了新加坡、美国、香港、日本、韩国、加拿大、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                        </div>
+                    </div>
+                                        <div class="row item xcblog-blog-item" data-date="2025-03-23">
+                        <div class="col-md-3">
+                            <div class="about_img">
+                                <a href="/news/article-79647.htm" title="动物医院需要几个兽医资格证才能进行体检（动物医院要求）" class="xcblog-blog-url">
+                                    <img src="/uploads/20240323/09004ed4b09aa34decc7c94ceeb17eb2.webp" alt="动物医院需要几个兽医资格证才能进行体检（动物医院要求）">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9">
+                            <a href="/news/article-79647.htm" title="动物医院需要几个兽医资格证才能进行体检（动物医院要求）" class="xcblog-blog-url">
+                                <h3 class="about_taital xcblog-blog-title">动物医院需要几个兽医资格证才能进行体检（动物医院要求）</h3>
+                            </a>
+                            <p class="about_text">摘要：       今天给各位分享动物医院需要几个兽医资格证才能进行体检的知识，其中也会对动物医院要求进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、请问:开.</p>
+                        </div>
+                    </div>
                                         <div class="row item xcblog-blog-item" data-date="2025-03-23">
                         <div class="col-md-3">
                             <div class="about_img">
@@ -175,98 +265,8 @@
                             <p class="about_text">一.Zookeeper的背景 随着互联网技术的发展，企业对计算机系统的计算，存储能力越来越高，各大IT企业都在追求并发，海量存储的极致，在这样的背景下，单纯依靠高性能单机来完成计算机，云计算的任务已经</p>
                         </div>
                     </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-22">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-22-free-node-subscribe.htm" title="VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/09004ed4b09aa34decc7c94ceeb17eb2.webp" alt="VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-22-free-node-subscribe.htm" title="VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了美国、新加坡、韩国、日本、加拿大、香港、欧洲等地区,最高速度可达18.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-21">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-78292.htm" title="宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/7c56d3b638aba64d8bf193713bd438d3.webp" alt="宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-78292.htm" title="宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">宠物猫疫苗多少钱一个针头（宠物猫接种疫苗多少钱）</h3>
-                            </a>
-                            <p class="about_text">摘要：       本篇文章给大家谈谈宠物猫疫苗多少钱一个针头，以及宠物猫接种疫苗多少钱对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫打疫苗多少钱?2、...       </p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-21">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-78291.htm" title="Apache Tomcat如何高并发处理请求" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/7c56d3b638aba64d8bf193713bd438d3.webp" alt="Apache Tomcat如何高并发处理请求">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-78291.htm" title="Apache Tomcat如何高并发处理请求" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">Apache Tomcat如何高并发处理请求</h3>
-                            </a>
-                            <p class="about_text">介绍 作为常用的http协议服务器，tomcat应用非常广泛。tomcat也是遵循Servelt协议的，Servelt协议可以让服务器与真实服务逻辑代码进行解耦。各自只需要关注Servlet协议即可。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-21">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/8eb9d9933ff3b2e0f7201530e522e98c.webp" alt="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</h3>
-                            </a>
-                            <p class="about_text">这一次的节点更新覆盖了美国、韩国、新加坡、香港、加拿大、欧洲、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-20">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-77586.htm" title="宠物狗批发网站大全（宠物狗批发价格）" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/9a0122327fa66b90ff72b270313cf8e6.webp" alt="宠物狗批发网站大全（宠物狗批发价格）">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-77586.htm" title="宠物狗批发网站大全（宠物狗批发价格）" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">宠物狗批发网站大全（宠物狗批发价格）</h3>
-                            </a>
-                            <p class="about_text">摘要：       今天给各位分享宠物狗批发网站大全的知识，其中也会对宠物狗批发价格进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、什么网卖宠物狗2、...  </p>
-                        </div>
-                    </div>
-                                        <div class="row item xcblog-blog-item" data-date="2025-03-20">
-                        <div class="col-md-3">
-                            <div class="about_img">
-                                <a href="/news/article-77585.htm" title="宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）" class="xcblog-blog-url">
-                                    <img src="/uploads/20240323/1efe5cff0e659c7211e5b8f615d11cd4.webp" alt="宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-md-9">
-                            <a href="/news/article-77585.htm" title="宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）" class="xcblog-blog-url">
-                                <h3 class="about_taital xcblog-blog-title">宠物医院收费价目表猫癣（宠物医院治疗猫癣费用）</h3>
-                            </a>
-                            <p class="about_text">摘要：       今天给各位分享宠物医院收费价目表猫癣的知识，其中也会对宠物医院治疗猫癣费用进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、东莞宠物医院收费.</p>
-                        </div>
-                    </div>
                                         
-                    <ul class="pagination"><li><a href="/date/2025-03/">&laquo;</a></li> <li><a href="/date/2025-03/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2025-03/page-3.htm">3</a></li><li><a href="/date/2025-03/page-4.htm">4</a></li><li><a href="/date/2025-03/page-5.htm">5</a></li><li><a href="/date/2025-03/page-6.htm">6</a></li> <li><a href="/date/2025-03/page-3.htm">&raquo;</a></li></ul>                </div>
+                    <ul class="pagination"><li><a href="/date/2025-03/">&laquo;</a></li> <li><a href="/date/2025-03/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2025-03/page-3.htm">3</a></li><li><a href="/date/2025-03/page-4.htm">4</a></li><li><a href="/date/2025-03/page-5.htm">5</a></li><li><a href="/date/2025-03/page-6.htm">6</a></li><li><a href="/date/2025-03/page-7.htm">7</a></li> <li><a href="/date/2025-03/page-3.htm">&raquo;</a></li></ul>                </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
     <div class="panel-heading">
@@ -274,16 +274,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-71559.htm" title="动物疫苗间隔时间多久打一次好（动物疫苗的使用方法及注意事项）">动物疫苗间隔时间多久打一次好（动物疫苗的使用方法及注意事项）</a></li>
-                        <li class="py-2"><a href="/news/article-75559.htm" title="给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）">给动物打疫苗在哪里打（动物打疫苗在哪里打多少钱）</a></li>
-                        <li class="py-2"><a href="/news/article-74883.htm" title="狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）">狗粮颗粒制作方法配方大全（最简颗粒狗粮制作方法）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-10-free-v2ray.htm" title="VPN网关 | 3月10日19.3M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 3月10日19.3M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-21-node-share-links.htm" title="VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点">VPN网关 | 3月21日20.9M/S|免费Shadowrocket/V2ray/Clash/SSR订阅节点</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-11-node-share-links.htm" title="VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点">VPN网关 | 3月11日18.2M/S|免费SSR/Shadowrocket/Clash/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-72880.htm" title="Docker极简入门：使用Docker-Compose 搭建redis集群">Docker极简入门：使用Docker-Compose 搭建redis集群</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-20-free-subscribe-node.htm" title="VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点">VPN网关 | 3月20日20.9M/S|免费SSR/Clash/V2ray/Shadowrocket订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-69975.htm" title="济南宠物领养群（济南领养动物）">济南宠物领养群（济南领养动物）</a></li>
+                        <li class="py-2"><a href="/news/article-75558.htm" title="宠物粮行业发展趋势图表（宠物粮食市场前景）">宠物粮行业发展趋势图表（宠物粮食市场前景）</a></li>
+                        <li class="py-2"><a href="/news/article-73540.htm" title="三国杀新品武将（三国杀新品武将推荐）">三国杀新品武将（三国杀新品武将推荐）</a></li>
+                        <li class="py-2"><a href="/news/article-74884.htm" title="猫咪领养网广州（广州猫咪领养公众号）">猫咪领养网广州（广州猫咪领养公众号）</a></li>
                         <li class="py-2"><a href="/news/article-79646.htm" title="宠物之家托运怎么收费（宠物托运咨询哪里）">宠物之家托运怎么收费（宠物托运咨询哪里）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-22-free-node-subscribe.htm" title="VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点">VPN网关 | 3月22日18.4M/S|免费Shadowrocket/SSR/Clash/V2ray订阅节点</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-3-9-node-share-links.htm" title="VPN网关 | 3月9日18.1M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点">VPN网关 | 3月9日18.1M/S|免费SSR/V2ray/Shadowrocket/Clash订阅节点</a></li>
-                        <li class="py-2"><a href="/news/article-80314.htm" title="ruby 版本管理RVM （ruby version manager）">ruby 版本管理RVM （ruby version manager）</a></li>
-                        <li class="py-2"><a href="/news/article-73541.htm" title="动物疫苗使用方法视频（动物疫苗使用方法视频教程）">动物疫苗使用方法视频（动物疫苗使用方法视频教程）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-3-26-free-node-subscribe-links.htm" title="VPN网关 | 3月26日21.1M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点">VPN网关 | 3月26日21.1M/S|免费Shadowrocket/Clash/SSR/V2ray订阅节点</a></li>
+                        <li class="py-2"><a href="/news/article-69974.htm" title="宠物领养数据库设计图片（宠物领养数据库设计图片）">宠物领养数据库设计图片（宠物领养数据库设计图片）</a></li>
                     </ul>
     </div>
 </div>
@@ -295,7 +295,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">57</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                <h4><span class="badge" style="float: right;">63</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
             </li>
                     </ul>
     </div>
